--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "personal_website",
   "version": "0.1.0",
+  "homepage": "https://isebatis.github.io/",
   "private": true,
-  "homepage": "https://isebatis.github.io",
   "dependencies": {
+    "@fontsource/outfit": "^5.0.13",
+    "@fontsource/roboto": "^5.0.13",
+    "@gsap/react": "^2.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
+    "gsap": "^3.12.5",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
+    "react-social-icons": "^6.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
