Encoding Personal Data to avoid raw scraping (git history :(

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "personal_website",
   "private": true,
+  "homepage": "https://isebatis.github.io/react-gh-pages",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -8,8 +9,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "framer-motion": "^12.23.12",
